<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/lay"
    android:background="#111111"
    tools:context=".MainActivity">
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <EditText
        android:id="@+id/input_time"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="#AE0202"
        android:hint="@string/setting"
        android:layout_gravity="center"
        android:inputType="number"
        android:maxLength="4"
        android:layout_marginHorizontal="50dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

        <Button
            android:id="@+id/set_button"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="0dp"
            android:padding="0dp"
            android:backgroundTint="#AE0202"
            android:text="@string/set"

            />
    </TableRow>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rotation="180"
            android:scaleType="fitXY"
            android:src="@drawable/download" />

        <Button
            android:id="@+id/changeclock1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#AE0202"
            android:layout_alignParentStart="true"
            android:rotation="180"
            android:layout_alignParentTop="true"
            android:text="@string/changeclock1" />


        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:backgroundTint="#AE0202"
            android:layout_alignParentTop="true"
            android:layout_marginStart="178dp"
            android:layout_marginTop="-1dp"
            android:rotation="180"
            tools:visibility="invisible"
            android:text="@string/start" />

        <Button
            android:id="@+id/reset1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="180"
            android:layout_marginStart="160dp"
            android:layout_alignBaseline="@+id/changeclock1"
            android:layout_alignBottom="@+id/changeclock1"
            android:layout_toEndOf="@+id/changeclock1"
            android:text="@string/reset1"
            android:visibility="invisible"
            tools:visibility="visible"
            android:backgroundTint="#AE0202"
            />

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_centerVertical="true"
            android:rotation="180"
            android:textColor="#AE0202"
            android:textStyle="italic"
            android:layout_centerHorizontal="true"
            android:text="@string/time"
            android:textSize="60sp" />
    <ImageView
        android:layout_width="wrap_content"
        android:src="@drawable/image2"
        android:layout_below="@+id/timer"
        android:layout_height="110dp"
        android:id="@+id/imageview"
        android:rotation="180"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"


        />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".5">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/download" />
        <Button
            android:id="@+id/changeclock2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:backgroundTint="#AE0202"
            android:layout_alignParentBottom="true"
            android:text="@string/changeclock2" />

        <Button
            android:id="@+id/start2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:backgroundTint="#AE0202"
            android:layout_marginStart="170dp"
            android:text="@string/start2" />



        <Button
            android:id="@+id/reset2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_alignBaseline="@+id/changeclock2"
            android:layout_alignBottom="@+id/changeclock2"
            android:backgroundTint="#AE0202"
            android:layout_toEndOf="@+id/changeclock2"
            android:text="@string/reset1"
            android:visibility="invisible"
            tools:visibility="visible"
            />

        <TextView
            android:id="@+id/timer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/time"
            android:textColor="#AE0202"
            android:textStyle="italic"
            android:textSize="60sp" />
        <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/image2"
            android:layout_above="@+id/timer2"
            android:layout_height="110dp"
            android:id="@+id/imageview2"
            android:rotation="180"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"



            />
    </RelativeLayout>

</LinearLayout>